[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msgpickle"
version = "1.4.1"
description = "msgpack as a pickler"
authors = [
    {name = "Erik Aronesty", email = "erik@q32.com"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "msgpack",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools]
package-data = {"msgpickle"=["py.typed"]}

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
